--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,7 @@ footer {
     height: 50px;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
+    text-decoration: none;
 }
 
 .social-links a:hover {
