--- a/styles.css
+++ b/styles.css
@@ -41,10 +41,10 @@ header {
 
 .logo-overlay {
     position: absolute;
-    bottom: -50%;
+    bottom: -100%;
     left: 30px;
     z-index: 10;
-    transform: translateY(50%);
+    transform: translateY(0);
 }
 
 .logo {
@@ -58,6 +58,12 @@ header {
 
 .mobile-logo {
     display: none;
+}
+
+@media (min-width: 481px) {
+    .mobile-logo {
+        display: none !important;
+    }
 }
 
 .tagline {
@@ -250,7 +256,7 @@ footer {
     }
 
     .logo-overlay {
-        display: none;
+        display: none !important;
     }
 
     .mobile-logo {
