--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ header {
 
 .logo-overlay {
     position: absolute;
-    bottom: -100%;
+    top: 100%;
     left: 30px;
     z-index: 10;
     transform: translateY(0);
@@ -66,7 +66,7 @@ header {
     }
     
     .logo-overlay {
-        bottom: -92px;
+        top: 100%;
         transform: translateY(0);
     }
 }
