--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,6 @@ header {
     display: block;
 }
 
-.logo-overlay {
-    text-align: center;
-    margin: 20px 0;
-}
-
 .logo {
     max-width: 184px;
     height: auto;
@@ -54,14 +49,17 @@ header {
 }
 
 .mobile-logo {
-    display: none;
+    display: block;
+    text-align: center;
+    margin: 2rem auto;
 }
 
-@media (min-width: 768px) and (pointer: fine), (min-width: 481px) and (pointer: fine) {
-    .mobile-logo {
-        display: none !important;
-    }
+.mobile-logo .logo {
+    margin: 0 auto;
+    display: block;
 }
+
+
 
 .tagline {
     font-size: 2.2rem;
@@ -252,21 +250,9 @@ footer {
         margin-bottom: 1rem;
     }
 
-    .logo-overlay {
-        display: none !important;
-    }
-
-    .mobile-logo {
-        display: block;
-        text-align: center;
-        margin: 2rem auto;
-    }
-
     .mobile-logo .logo {
         max-width: 143px;
         padding: 3px;
-        margin: 0 auto;
-        display: block;
     }
 
     .category-image {
